  to work with linear constraint classification through the C API
- new method SCIPdivesetGetNSols to query the number of found solutions from a diveset.
- new method SCIPnextafter that wraps different nextafter methods to return the next representable value after a given value

performance improvements:
- use disjoint set to reduce peak memory usage and time to compute of clique table connectedness information
- add and use RESTRICT macro for some pointers
- improved the implementation of SCIPvarGetActiveRepresentatives
- speed-up reverse propagation
- removed bestrelaxsol and directly access relaxation solution instead to decrease overhead when using relaxation handlers
- use LP solution polishing during probing and diving mode to activate it during many primal heuristics; remains disabled
  during strong branching and OBBT
- for fast presolving emphasis, disable use of implications in logicor presolving
- use limit on the total number of nonzeros added to the clique table during the greedyCliqueAlgorithm of cons_knapsack.c
- faster implementation of CMIR cut generation heursitic
- improved cut selection and management

fixed bugs:
- fix wrong statistic display of diving leaf solutions
- fix linear knapsack relaxation during separation if a binary variable does not have a solution value in [0,1].
- fixed bug in feasibility pump heuristic when switching on the usefp20 parameter
- fixed potential ressource leaks in SCIPsolveLinearProb, expr.c, sepa_eccuts, cons_cumulative.c, cons_nonlinear.c
- fixed bug in cons_orbitope.c, where wrong terminating index in separation of SCIs was used
- fixed order of SCIPcalcCliquePartition in corner case where no cliques are available
- fixed bug in mps reader. Reader now prints OBJSENSE section and tries to generate unique names of constraints
- fixed handling of LOOSE variables in locks heuristic
- fixed upgrade to a varbound constraint if abspower constraint contains a multi-aggregated variable