@@ -281,7 +281,7 @@ SCIP_RETCODE createSubSCIP(
    SCIPhashmapFree(&varsmap);
 
    /* initialize data structure for NLP solve statistics */
-   SCIP_CALL( SCIPnlpStatisticsCreate(&heurdata->nlpstatistics) );
+   SCIP_CALL( SCIPnlpStatisticsCreate(SCIPblkmem(scip), &heurdata->nlpstatistics) );
 
    /* do not abort subproblem on CTRL-C */
    SCIP_CALL( SCIPsetBoolParam(heurdata->subscip, "misc/catchctrlc", FALSE) );
@@ -346,7 +346,7 @@ SCIP_RETCODE freeSubSCIP(
 
    /* free NLP statistics */
    if( heurdata->nlpstatistics != NULL )
-      SCIPnlpStatisticsFree(&heurdata->nlpstatistics);
+      SCIPnlpStatisticsFree(SCIPblkmem(scip), &heurdata->nlpstatistics);
    assert(heurdata->nlpstatistics == NULL);
 
    SCIP_CALL( SCIPgetOrigVarsData(heurdata->subscip, &subvars, &nsubvars, NULL, NULL, NULL, NULL) );
