@@ -623,7 +623,7 @@ SCIP_DECL_PROPINITSOL(propInitsolNlobbt)
 
    SCIP_CALL( SCIPcreateRandom(scip, &propdata->randnumgen,
          DEFAULT_RANDSEED) );
-   SCIP_CALL( SCIPnlpStatisticsCreate(&propdata->nlpstatistics) );
+   SCIP_CALL( SCIPnlpStatisticsCreate(SCIPblkmem(scip), &propdata->nlpstatistics) );
    propdata->lastnode = -1;
 
    return SCIP_OKAY;
@@ -638,7 +638,7 @@ SCIP_DECL_PROPEXITSOL(propExitsolNlobbt)
    propdata = SCIPpropGetData(prop);
    assert(propdata != NULL);
 
-   SCIPnlpStatisticsFree(&propdata->nlpstatistics);
+   SCIPnlpStatisticsFree(SCIPblkmem(scip), &propdata->nlpstatistics);
    SCIPfreeRandom(scip, &propdata->randnumgen);
 
    SCIP_CALL( propdataClear(scip, propdata) );
